# AIL

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.ai.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  LICENSE  README.ai.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  ab_full_results.jsonl  ab_full_v2.jsonl  ab_judgments.jsonl  ab_judgments_v2.jsonl  ab_smoke.jsonl
reference-impl/: README.md  ab_results.jsonl  ab_results.txt  pyproject.toml
reference-impl/ail/: __init__.py  __main__.py  authoring.py  cli.py  reference_card.md
reference-impl/ail/agentic/: __init__.py  agent.py  authoring_chat.py  authoring_ui.py  chat.py  diagnosis.py  intent_md.py  process_manager.py  project.py  scheduler.py  server.py  ui.py  watcher.py  web_ui.py
reference-impl/ail/parser/: ast.py  lexer.py  parser.py  purity.py
reference-impl/ail/runtime/: anthropic_adapter.py  calibration.py  executor.py  intent_validation.py  ollama_adapter.py  openai_adapter.py  parallel.py  trace.py
reference-impl/ail/stdlib/: __init__.py  utils.ail
reference-impl/ail_mvp/: __init__.py  authoring.py  cli.py
reference-impl/ail_mvp/parser/: __init__.py  ast.py  lexer.py  parser.py  purity.py
reference-impl/ail_mvp/runtime/: __init__.py  context.py  (+9 more)
reference-impl/examples/: README.md  agent_fetch_summarize.ail  agent_loop_1_hello.ail  agent_loop_2_evolve.ail  agent_loop_3_http.ail  ask_human.ail  audit_provenance.ail  cascade_extract.ail  classify.ail  evolve_retune.ail  evolve_retune_demo.py  expense_analyzer.ail  fizzbuzz.ail  hello.ail  meta_codegen.ail  parallel_analysis.ail  review_analyzer.ail  run_live.py  safe_csv_parser.ail  sample_expenses.txt  smart_reply.ail  summarize_and_classify.ail  translate.ail
reference-impl/tests/: test_agent_loop.py  test_agentic_agent.py  test_agentic_autofix.py  test_agentic_chat.py  test_agentic_diagnosis.py  test_agentic_intent_md.py  test_agentic_project.py  test_agentic_server.py  test_agentic_watcher.py  test_agentic_web_ui.py  test_ail_parse_check.py  test_ail_run.py  test_anthropic_parsing.py  test_attempt.py  test_authoring.py  test_authoring_chat.py  test_authoring_prompt_examples_parse.py  test_authoring_prompt_structure.py  test_calibration.py  test_cli_save_source.py  test_clock_effect.py  test_dotenv.py  test_effects.py  test_env_effect.py  test_evolution.py  test_evolve_server_return.py  test_executor.py  test_fn.py  test_http_graphql.py  test_http_headers.py  test_human_approve.py  test_imports.py  test_input_hint.py  test_integration.py  test_intent_validation.py  test_json_effects.py  test_match.py  test_math_builtins.py  test_ollama_adapter.py  test_parallel.py  (+13 more)
reference-impl/tools/: bench_authoring.py  bench_vs_python.py  benchmark.py  benchmark_ab_judge.py  benchmark_ab_paths.py  calibration_demo.py  evolve_demo.py  heaal_score.py  intent_vs_raw_ab.py  run_live.py
reference-impl/training/: FROZEN.md  HANDOFF.md  README.md  export_to_ollama.py  seed_advanced.py  seed_from_bench.py  seed_from_examples.py  seed_from_opus.py  seed_handwritten.py  seed_r3_fixes.py  seed_v3_fixes.py  seed_variations.py  to_chatml.py  train.chatml.jsonl  train.py  validate.py
(+296 files in other folders)
