[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ail-mvp"
version = "1.0.0"
description = "Reference implementation (MVP) of AIL — an AI-authored programming language"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "AIL Project Contributors" }
]
keywords = ["ail", "ai", "language", "interpreter", "llm"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.34"]
dev = ["pytest>=7.0"]

[project.scripts]
ail = "ail_mvp.cli:main"

[project.urls]
Homepage = "https://github.com/hyun06000/AIL"
Repository = "https://github.com/hyun06000/AIL"

[tool.setuptools.packages.find]
where = ["."]
include = ["ail_mvp*"]
